エラー出たから１からやり直し

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "ress": "^5.0.2"
+    "ress": "^5.0.2",
+    "sass": "^1.82.0"
   },
   "devDependencies": {
     "@types/node": "^20",
