--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "ress": "^5.0.2",
-    "sass": "^1.82.0"
+    "sass": "^1.82.0",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
